|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
?? Oct 2008, PHP 5.2.7RC2
- Fixed bug #46292 (PDO::setFetchMode() shouldn't requires the 2nd arg when 
  using FETCH_CLASSTYPE). (Felipe)
- Fixed bug #46274, #46249 (pdo_pgsql always fill in NULL for empty BLOB and 
  segfaults when returned by SELECT). (Felipe)
- Fixed bug #46246 (difference between call_user_func(array($this, $method))
  and $this->$method()). (Dmitry)
- Fixed bug #46139 (PDOStatement->setFetchMode() forgets FETCH_PROPS_LATE).
  (chsc at peytz dot dk, Felipe)
- Fixed bug #46026 (bzip2.decompress/zlib.inflate filter tries to decompress
  after end of stream). (Keisial at gmail dot com, Greg)
- Fixed bug #44251, #41125 (PDO + quote() + prepare() can result in segfault).
  (tsteiner at nerdclub dot net)
- Fixed bug #37100 (data is returned truncated with BINARY CURSOR). (Tony)

09 Oct 2008, PHP 5.2.7RC1
- Reverted fix for bug #44197 due to behaviour change in minor version.
  (Felipe)

- Added "PHP_INI_SCAN_DIR" environment variable which can be used to either
  disable or change the compile time ini scan directory (FR #45114). (Jani)

- Fixed security issues detailed in CVE-2008-2665 and CVE-2008-2666.
  (Christian Hoffmann)
- Fixed simplexml asXML() not to lose encoding when dumping entire document
  to file. (Ilia)
- Fixed a crash inside PDO when trying instantiate PDORow manually. (Felipe)
- Fixed build failure of ext/mysqli with libmysql 6.0 - missing rpl
  functions. (Andrey)
- Fixed a regression when using strip_tags() and < is within an attribute.
  (Scott)
- Fixed a crash on invalid method in ReflectionParameter constructor.
  (Christian Seiler)
- Fixed bug #46247 (ibase_set_event_handler() is allowing to pass callback
  without event). (Felipe)
- Fixed bug #46215 (json_encode mutates its parameter and has some 
  class-specific state). (Felipe)
- Fixed bug #46206 (pg_query_params/pg_execute convert passed values to
  strings). (Ilia)